--- a/style.css
+++ b/style.css
@@ -1,21 +1,22 @@
 body {
 	margin: 0;
-	padding: 0;
+	padding: 50;
 	background: #FFFFFF url(img05.gif) repeat left top;
 	font: bold Georgia, "Times New Roman", Times, serif;
-	color: rgb(96, 100, 87);
-	text-align: justify;
+	color: rgb(36, 37, 33);
+	text-align: center;
 }
 h1, h2, h3, h4, h5, h6 {
-	margin-top: 0;
-	padding-top: 0;
+	margin-top: 50;
+	padding-top: 50;
+	border: 2px dotted #898F7D;
+	background: #FFFFFF url(img04.gif) repeat left top;
 }
 header {
 	width: 770px;
 	height: 90px;
 	margin: 0 auto;
 }
-
 header h1 {
 	margin: 0;
 	padding: 30px 0 0 20px;
@@ -25,27 +26,30 @@ header h1 {
 	letter-spacing: -2px;
 	color: rgb(32, 34, 30);
 }
-
 header h2 {
-	padding-left: 25px;
-	font-size: 15px;
+  padding-left: 25px;
+  font-size: 15px;
 }
-h2{
-        width: 750px;
-        margin: 2em auto 1em auto;
+h2 { 
+  width: 750px;
+  margin: 2em auto 1em auto;
 }
 ul {
-	margin: 0;
-	padding: 0;
+  margin: 50;
+  padding: 50;
+  list-style: none;
+  text-align: left;
+}
+ol {
+	margin: 50;
+	padding: 50;
 	list-style: none;
 	text-align: left;
+	border: 1px solid #898F7D;
 }
 footer {
-	clear: both;
-	width: 700px;
-	height: 30px;
-	margin: 0 auto;
-}
-a{
-    text-align: right;
+  clear: both;
+  width: 700px;
+  height: 30px;
+  margin: 0 auto;
 }
